<resources>
    <string name="app_name">Sallona app</string>
    <string name="btn1">TIP TO TOE TREATMENTS</string>
    <string name="btn2"> DRESSING</string>
    <string name="btn3">PRODUCTS</string>
    <string name="btn4">LADIES</string>
    <string name="btn5">GENTS</string>
    <string name="btn6">KIDS</string>
    <string name="btn7">Select Services</string>
    <string name="btn8">Hair cutting</string>
    <string name="btn9">Facial</string>
    <string name="btn10">Hair color</string>
    <string name="btn11">Blow Dry   30min</string>
    <string name="btn12">Low Dry   30min</string>
    <string name="btn13">Hair spa  45min</string>
    <string name="btn14">Hair Trim 15min</string>
    <string name="btn15">Rs3000.00</string>
    <string name="btn16">Rs2000.00</string>
    <string name="btn17">Rs2500.00</string>
    <string name="btn18">Rs2200.00</string>
    <string name="btn19">2 services</string>
    <string name="btn20">Rs4200.00</string>
    <string name="btn21">BOOK</string>
    <string name="btn22">Search Beautician</string>
    <string name="btn23">Select your place </string>
    <string name="btn24">At salon</string>
    <string name="btn25">Venessa</string>
    <string name="btn26">Leesa</string>
    <string name="btn27">Ruma</string>
    <string name="btn28">Madona</string>
    <string name="btn29">BOOK</string>
    <string name="btn30">BOOK</string>
    <string name="btn31">BOOK</string>
    <string name="btn32">BOOK</string>
    <string name="btn33">Select your location</string>
    <string name="btn34">Search your location</string>
    <string name="btn35">10.00am</string>
    <string name="btn36">10.30am</string>
    <string name="btn37">Hair Trim</string>
    <string name="btn38">-Rs2200.00 10.00–10.15</string>
    <string name="btn39">Low dry </string>
    <string name="btn40">-Rs2000.00 10.1510.30</string>
    <string name="btn41">Total </string>
    <string name="btn42">Rs4200.00</string>
    <string name="btn43">Add another service </string>
    <string name="btn44">Book </string>
    <string name="btn45">Search </string>
    <string name="btn46">Haircutting </string>
    <string name="btn47">Facial </string>
    <string name="btn48">Hair color</string>
    <string name="btn49">Mini cleanup </string>
    <string name="btn50">Rs3000.00 </string>
    <string name="btn51">Gold Facial</string>
    <string name="btn52">Rs3000.00 </string>
    <string name="btn53">Aroma Facial </string>
    <string name="btn54">Rs3000.00 </string>
    <string name="btn55">Normal Facial </string>
    <string name="btn56">Rs3000.00</string>
    <string name="btn57">Book </string>
    <string name="btn58">Have you used the services of salonna before????</string>
    <string name="btn59">Yes</string>
    <string name="btn60">No</string>
    <string name="btn61">Appointment confirmed Today,10.00am</string>
    <string name="btn62">You are done!</string>
    <string name="btn63">OK,GOT IT</string>
    <string name="btn64">Create a beautician account</string>
    <string name="btn65">Add customer service</string>
    <string name="btn66">Add products</string>
    <string name="btn67">Update Services Details</string>
    <string name="btn68">Category</string>
    <string name="btn69">service name</string>
    <string name="btn70">Price</string>
    <string name="btn71">Time</string>
    <string name="btn72">BOOKED SERVICES</string>
    <string name="btn73">Delete Service</string>
    <string name="btn74">Hair cutting</string>
    <string name="btn75">blowdry</string>
    <string name="btn76">2000</string>
    <string name="btn77">1h</string>
    <string name="btn78">Update</string>
    <string name="btn79">Delete</string>
    <string name="btn80">Facial</string>
    <string name="btn81">Gold facial</string>
    <string name="btn82">3000</string>
    <string name="btn83">3h</string>
    <string name="btn84">Update</string>
    <string name="btn85">Delete</string>
    <string name="btn86">Hair color</string>
    <string name="btn87">Highlight</string>
    <string name="btn88">3000</string>
    <string name="btn89">3h</string>
    <string name="btn90">Update</string>
    <string name="btn91">Delete</string>
    <string name="btn92">Book</string>
    <string name="btn93">Book</string>
    <string name="btn94">Book</string>
    <string name="btn95">Book</string>
    <string name="checkbox">CheckBox</string>
    <string name="btn96">MANICURE AND PEDICURE</string>
    <string name="btn97">FACIAL</string>
    <string name="btn98">HAIR CUTS</string>
    <string name="btn99">BLOW DRY</string>
    <string name="btn100">LOW DRY</string>
    <string name="btn101">RELAXING</string>
    <string name="btn102">HAIR COLORING</string>
    <string name="btn103">HAIR EXTENTIONS/CUTINGS</string>
    <string name="btn104">BABY HAIR CUTS</string>
    <string name="btn105">GOLD FACIALS</string>
    <string name="btn106">NORMAL FACIALS</string>
    <string name="btn107">HIGH THERAPIES</string>
    <string name="btn108">GENTELMENS REBALANCING FACIAL</string>
    <string name="btn109">CLARIFYING ACNE FACIAL</string>
    <string name="btn110">ESCAPE FACIAL</string>
    <string name="btn111">SIGNATURE MANICURE</string>
    <string name="btn112">GEL MANICURE</string>
    <string name="btn113">ANC MANICURE</string>
    <string name="btn114">NAIL ARTS</string>
    <string name="btn115">TENSION RELIEF PEDICURE</string>
    <string name="btn116">GENTLMEN MANICURE</string>
    <string name="btn117">ADD</string>
    <string name="btn118">NEXT</string>
    <string name="btn119">ADD</string>
    <string name="btn120">NEXT</string>
    <string name="btn121">ADD</string>
    <string name="btn122">NEXT</string>
    <string name="btn123">Name</string>
    <string name="btn124">phone</string>
    <string name="btn125">date</string>
    <string name="btn126">time</string>
    <string name="btn127">Treatment</string>
    <string name="btn128">APPOINMENT</string>
    <string name="btn129">SUBMIT</string>
    <string name="btn130">NEXT</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
</resources>